# cranelift-wit

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
wat-examples/: log.wasm  log.wat
